# reconcile

./: .dockerignore  .editorconfig  .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md  a.md  bump-version.sh  db.sqlite3  manifest.json  package-lock.json  package.json  rust-toolchain.toml
.github/: dependabot.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  config-e2e.yml  config.yml  rust-toolchain.toml  rustfmt.toml
backend/fuzz/: Cargo.toml
backend/fuzz/fuzz_targets/: reconcile.rs
backend/reconcile/: Cargo.toml
backend/reconcile/src/: errors.rs  lib.rs  operation_transformation.rs  utils.rs
backend/reconcile/src/diffs/: lcs.rs  mod.rs  myers.rs  raw_operation.rs  utils.rs
backend/reconcile/src/diffs/snapshots/: reconcile__diffs__myers__tests__complex_diff.snap  reconcile__diffs__myers__tests__delete_only.snap  reconcile__diffs__myers__tests__identical_content.snap  reconcile__diffs__myers__tests__insert_only.snap  reconcile__diffs__myers__tests__prefix_and_suffix.snap
backend/reconcile/src/operation_transformation/: cursor.rs  edited_text.rs  merge_context.rs  mod.rs  operation.rs  ordered_operation.rs
backend/reconcile/src/operation_transformation/snapshots/: reconcile__operation_transformation__edited_text__tests__calculate_operations.snap  reconcile__operation_transformation__edited_text__tests__calculate_operations.snap.new  reconcile__operation_transformation__edited_text__tests__calculate_operations_with_no_diff.snap  reconcile__operations__edited_text__tests__calculate_operations.snap
backend/reconcile/src/operation_transformation/utils/: cook_operations.rs  elongate_operations.rs
backend/reconcile/src/operations/: mod.rs  operation.rs  operation_sequence.rs
backend/reconcile/src/operations/snapshots/: reconcile__operations__operation__tests__shifting_error.snap  reconcile__operations__operation_sequence__tests__calculate_operations.snap  reconcile__operations__operation_sequence__tests__calculate_operations_with_large_diff.snap
backend/reconcile/src/tokenizer/: mod.rs  token.rs  word_tokenizer.rs
backend/reconcile/src/tokenizer/snapshots/: reconcile__tokenizer__word_tokenizer__tests__with_snapshots-2.snap  reconcile__tokenizer__word_tokenizer__tests__with_snapshots-3.snap  reconcile__tokenizer__word_tokenizer__tests__with_snapshots-4.snap  reconcile__tokenizer__word_tokenizer__tests__with_snapshots-5.snap  reconcile__tokenizer__word_tokenizer__tests__with_snapshots.snap
backend/reconcile/src/utils/: common_prefix_len.rs  common_suffix_len.rs  find_common_overlap.rs  merge_iters.rs  mod.rs  ordered_operation.rs  string_builder.rs
backend/reconcile/tests/: example_document.rs  test.rs
backend/reconcile/tests/examples/: 1.yml  10.yml  11.yml  12.yml  13.yml  2.yml  3.yml  4.yml  5.yml  6.yml  7.yml  8.yml  9.yml  README.md  deletes.yml  deletes_and_inserts.yml  idempotent_inserts.yml  multiline.yml  replacing.yml  utf-8.yml  various.yml
backend/reconcile/tests/resources/: room_with_a_view.txt
backend/sync_lib/: Cargo.toml
backend/sync_lib/pkg/: package.json
backend/sync_lib/src/: errors.rs  lib.rs
backend/sync_lib/src/operations/: operation.rs  operation_sequence.rs
backend/sync_lib/src/operations/snapshots/: sync_lib__operations__operation__tests__creation_errors-2.snap  sync_lib__operations__operation__tests__creation_errors-3.snap  sync_lib__operations__operation__tests__creation_errors-4.snap  sync_lib__operations__operation__tests__creation_errors-5.snap  sync_lib__operations__operation__tests__creation_errors.snap  sync_lib__operations__operation__tests__shifting_error.snap  sync_lib__operations__operation_sequence__tests__calculate_operations.snap  sync_lib__operations__operation_sequence__tests__calculate_operations_with_large_diff.snap  sync_lib__operations__operation_sequence__tests__calculate_operations_with_no_diff.snap
backend/sync_lib/test/resources/: pride_and_prejudice.txt
backend/sync_lib/tests/: web.rs
backend/sync_server/: Cargo.toml  README.md
backend/sync_server/src/: app_state.rs  cli.rs  config.rs  consts.rs  database.rs  errors.rs  main.rs  server.rs  utils.rs
backend/sync_server/src/app_state/: broadcasts.rs  cursors.rs  database.rs  websocket.rs
backend/sync_server/src/app_state/database/: models.rs
backend/sync_server/src/app_state/database/migrations/: 20250522192949_add_provenance_columns.sql
backend/sync_server/src/app_state/websocket/: broadcasts.rs  models.rs  utils.rs
backend/sync_server/src/cli/: args.rs  color_when.rs
backend/sync_server/src/config/: database_config.rs  server_config.rs  user_config.rs
backend/sync_server/src/database/: models.rs
backend/sync_server/src/database/migrations/: 20241207143519_bootstrap.sql
backend/sync_server/src/server/: app_state.rs  auth.rs  create_document.rs  delete_document.rs  device_id_header.rs  fetch_document_version.rs  fetch_document_version_content.rs  fetch_latest_document_version.rs  fetch_latest_documents.rs  index.rs  ping.rs  requests.rs  responses.rs  update_document.rs  websocket.rs
backend/sync_server/src/server/assets/: index.html
backend/sync_server/src/utils/: dedup_paths.rs  normalize.rs  sanitize_path.rs
backend/sync_wasm/: Cargo.toml
backend/sync_wasm/src/: lib.rs
docs/: advanced-python.md  advanced-ts.md
examples/: compare-with-diff-match-patch.rs  merge-file.rs  merge_file.py
frontend/: eslint.config.mjs  manifest.json  package-lock.json  package.json
obsidian-plugin/: manifest.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
plugin/: README.md  esbuild.config.mjs  eslint.config.mjs  jest.config.js  main.ts  manifest.json  package-lock.json  package.json  tsconfig.json  versions.json  webpack.config.js
reconcile-js/: jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
reconcile-python/: .gitignore  Cargo.toml  pyproject.toml
reconcile-python/python/reconcile_text/: __init__.py  _native.pyi
reconcile-python/src/: lib.rs
reconcile-python/tests/: test_reconcile.py
scripts/: build-js.sh  build-website.sh  bump-version.sh  (+7 more)
(+344 files in other folders)
