[workspace]
resolver = "2"
members = [
    "reconcile",
    "fuzz",
    "sync_server", 
    "sync_lib"
]

[workspace.dependencies]  
serde = { version = "1.0.214", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.66", default-features = false  } 
uuid = { version = "1.11.0", default-features = false, features = ["v4", "serde"] }
log = { version = "0.4.22",  default-features = false }
anyhow =  { version = "1.0.94", features = ["backtrace"] }
