[package]
name = "reconcile-text-python"
version = "0.9.2"
edition = "2024"
rust-version = "1.94"
authors = ["Andras Schmelczer <andras@schmelczer.dev>"]
license = "MIT"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
reconcile-text = { path = ".." }
pyo3 = { version = "0.28.2", features = ["extension-module"] }
