[package]
name = "reconcile"
version = "0.1.0"
edition = "2021"

[dependencies]
ropey = { version = "1.6.1", default-features = false, features = ["simd"]  }

# optional dependencies
serde = { version = "1.0.215", optional = true }

[features]
serde = [ "dep:serde" ]

[dev-dependencies]
insta = "1.41.1"
pretty_assertions = "1.4.1"
test-case = "3.3.1"
