[package]
name = "reconcile"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.219", optional = true }

[features]
serde = [ "dep:serde" ]

[dev-dependencies]
insta = "1.41.1"
pretty_assertions = "1.4.1"
test-case = "3.3.1"

[lints]
workspace = true
