[package]
name = "sync-wasm"
version = "0.1.0"
authors = ["Andras Schmelczer <andras@schmelczer.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
sync_lib = { path = "../sync_lib" }
reconcile = { path = "../reconcile" }
getrandom = { version = "0.2.3", features = ["js"] }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
